// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Rating > snapshots > matches snapshot for disabled 1`] = `
<div
  class="flex items-center space-x-1 text-base"
>
  <button
    aria-label="1 star"
    class="transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-yellow-400 cursor-default hover:text-current"
    disabled=""
    type="button"
  >
    ⭐
  </button>
  <button
    aria-label="2 stars"
    class="transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-yellow-400 cursor-default hover:text-current"
    disabled=""
    type="button"
  >
    ⭐
  </button>
  <button
    aria-label="3 stars"
    class="transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-gray-300 cursor-default hover:text-current"
    disabled=""
    type="button"
  >
    ☆
  </button>
  <button
    aria-label="4 stars"
    class="transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-gray-300 cursor-default hover:text-current"
    disabled=""
    type="button"
  >
    ☆
  </button>
  <button
    aria-label="5 stars"
    class="transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-gray-300 cursor-default hover:text-current"
    disabled=""
    type="button"
  >
    ☆
  </button>
</div>
`;

exports[`Rating > snapshots > matches snapshot for five stars 1`] = `
<div
  class="flex items-center space-x-1 text-base"
>
  <button
    aria-label="1 star"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-yellow-400 hover:text-yellow-500"
    type="button"
  >
    ⭐
  </button>
  <button
    aria-label="2 stars"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-yellow-400 hover:text-yellow-500"
    type="button"
  >
    ⭐
  </button>
  <button
    aria-label="3 stars"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-yellow-400 hover:text-yellow-500"
    type="button"
  >
    ⭐
  </button>
  <button
    aria-label="4 stars"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-yellow-400 hover:text-yellow-500"
    type="button"
  >
    ⭐
  </button>
  <button
    aria-label="5 stars"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-yellow-400 hover:text-yellow-500"
    type="button"
  >
    ⭐
  </button>
</div>
`;

exports[`Rating > snapshots > matches snapshot for large size 1`] = `
<div
  class="flex items-center space-x-1 text-xl"
>
  <button
    aria-label="1 star"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-xl text-yellow-400 hover:text-yellow-500"
    type="button"
  >
    ⭐
  </button>
  <button
    aria-label="2 stars"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-xl text-yellow-400 hover:text-yellow-500"
    type="button"
  >
    ⭐
  </button>
  <button
    aria-label="3 stars"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-xl text-yellow-400 hover:text-yellow-500"
    type="button"
  >
    ⭐
  </button>
  <button
    aria-label="4 stars"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-xl text-yellow-400 hover:text-yellow-500"
    type="button"
  >
    ⭐
  </button>
  <button
    aria-label="5 stars"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-xl text-gray-300 hover:text-yellow-400"
    type="button"
  >
    ☆
  </button>
</div>
`;

exports[`Rating > snapshots > matches snapshot for read only 1`] = `
<div
  class="flex items-center space-x-1 text-base"
>
  <button
    aria-label="1 star"
    class="transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-yellow-400 cursor-default hover:text-current"
    disabled=""
    type="button"
  >
    ⭐
  </button>
  <button
    aria-label="2 stars"
    class="transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-yellow-400 cursor-default hover:text-current"
    disabled=""
    type="button"
  >
    ⭐
  </button>
  <button
    aria-label="3 stars"
    class="transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-yellow-400 cursor-default hover:text-current"
    disabled=""
    type="button"
  >
    ⭐
  </button>
  <button
    aria-label="4 stars"
    class="transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-yellow-400 cursor-default hover:text-current"
    disabled=""
    type="button"
  >
    ⭐
  </button>
  <button
    aria-label="5 stars"
    class="transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-gray-300 cursor-default hover:text-current"
    disabled=""
    type="button"
  >
    ☆
  </button>
</div>
`;

exports[`Rating > snapshots > matches snapshot for small size 1`] = `
<div
  class="flex items-center space-x-1 text-sm"
>
  <button
    aria-label="1 star"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-sm text-yellow-400 hover:text-yellow-500"
    type="button"
  >
    ⭐
  </button>
  <button
    aria-label="2 stars"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-sm text-yellow-400 hover:text-yellow-500"
    type="button"
  >
    ⭐
  </button>
  <button
    aria-label="3 stars"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-sm text-yellow-400 hover:text-yellow-500"
    type="button"
  >
    ⭐
  </button>
  <button
    aria-label="4 stars"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-sm text-gray-300 hover:text-yellow-400"
    type="button"
  >
    ☆
  </button>
  <button
    aria-label="5 stars"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-sm text-gray-300 hover:text-yellow-400"
    type="button"
  >
    ☆
  </button>
</div>
`;

exports[`Rating > snapshots > matches snapshot for three stars 1`] = `
<div
  class="flex items-center space-x-1 text-base"
>
  <button
    aria-label="1 star"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-yellow-400 hover:text-yellow-500"
    type="button"
  >
    ⭐
  </button>
  <button
    aria-label="2 stars"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-yellow-400 hover:text-yellow-500"
    type="button"
  >
    ⭐
  </button>
  <button
    aria-label="3 stars"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-yellow-400 hover:text-yellow-500"
    type="button"
  >
    ⭐
  </button>
  <button
    aria-label="4 stars"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-gray-300 hover:text-yellow-400"
    type="button"
  >
    ☆
  </button>
  <button
    aria-label="5 stars"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-gray-300 hover:text-yellow-400"
    type="button"
  >
    ☆
  </button>
</div>
`;

exports[`Rating > snapshots > matches snapshot for zero stars 1`] = `
<div
  class="flex items-center space-x-1 text-base"
>
  <button
    aria-label="1 star"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-gray-300 hover:text-yellow-400"
    type="button"
  >
    ☆
  </button>
  <button
    aria-label="2 stars"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-gray-300 hover:text-yellow-400"
    type="button"
  >
    ☆
  </button>
  <button
    aria-label="3 stars"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-gray-300 hover:text-yellow-400"
    type="button"
  >
    ☆
  </button>
  <button
    aria-label="4 stars"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-gray-300 hover:text-yellow-400"
    type="button"
  >
    ☆
  </button>
  <button
    aria-label="5 stars"
    class="cursor-pointer transition-colors disabled:cursor-not-allowed disabled:opacity-50 text-base text-gray-300 hover:text-yellow-400"
    type="button"
  >
    ☆
  </button>
</div>
`;
